2001-10-14  Gordon Matzigkeit  <gord@fig.org>

	* configure.in: Explicitly call _AM_DEPENDENCIES(CC) for the
	benefit of older Autoconfs.

2001-10-13  Yoshinori K. Okuji  <okuji@gnu.org>

	* netboot/fsys_tftp.c (tftp_read): Move the unused data
	forwards, only if AMT is more than zero. If AMT is not positive,
	subtract BUF_READ from SAVED_FILEPOS and set BUF_READ to zero,
	to skip the whole buffer. Reported by Frank Mehnert.
	
2001-10-13  Yoshinori K. Okuji  <okuji@gnu.org>

	Don't use get_diskinfo_floppy. Reported by Ben Liblit
	<liblit@eecs.berkeley.edu>.
	
	* stage2/asm.S (get_diskinfo_floppy): Removed (by cpp).
	* stage2/bios.c (get_diskinfo_floppy): Removed.
	(get_diskinfo): Don't call get_diskinfo_floppy any longer.
	
2001-10-13  Yoshinori K. Okuji  <okuji@gnu.org>

	Based on a patch from Jeremy Katz <katzj@redhat.com>:
	* docs/grub.texi (Stage2 errors): Added documentation on the
	error number 33 (Serial device not configured).
	* grub/asmstub.c (serial_exists): New function.
	* stage2/serial.c (serial_exists): Likewise.
	* stage2/serial.h (serial_exists): New prototype.
	* stage2/shared.h (grub_error_t): ERR_NEED_SERIAL is added.
	* stage2/builtins.c (terminal_func) [SUPPORT_SERIAL]: If a
	serial device is not configured yet, restore the terminal and
	set ERRNUM to ERR_NEED_SERIAL.
	* stage2/common.c (err_list): Added an item for ERR_NEED_SERIAL.
	
2001-10-13  Yoshinori K. Okuji  <okuji@gnu.org>

	From Jason Thomas <jason@topic.com.au>:
	* util/grub-install.in (convert): Add support for DAC960.

	From Adrian Phillips <a.phillips@dnmi.no>:
	* lib/device.c (get_dac960_disk_name): New function.
	(init_device_map) [__linux__]: Add support for DAC960.
	
2001-10-11  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c (reiserfs_super_block): Updated
	to better match recent reiserfs versions.
	(reiserfs_mount): Handle cases where journal can't be found,
	e.g. journal on another disk or unexpected journal parameters.
	In that case the journal isn't used.
	